# cvec

./: AGENTS.md  README.md  justfile  pyproject.toml
src/cvec/: __init__.py
src/cvec/cli/: formatters.py  main.py
src/cvec/core/: config.py
src/cvec/models/: cve_model.py
src/cvec/services/: __init__.py  artifact_fetcher.py  downloader.py  embeddings.py  extractor.py  search.py  version.py
tests/: conftest.py  test_artifact_fetcher.py  test_cli.py  test_downloader.py  test_embeddings.py  test_extractor.py  test_integration.py  test_output_file.py  test_search.py  test_version.py
