[project]
name = "cvec"
version = "0.1.0"
description = "CLI tool for downloading, extracting, and searching CVE data"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cve", "security", "vulnerability", "cli"]
dependencies = [
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "tqdm>=4.67.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.32.4.20250611",
    "types-tqdm>=4.67.0.20250516",
]

[project.scripts]
cvec = "cvec.cli.main:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
